feat: Git Action

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "openssl enc -d -aes-256-cbc -in .env.enc -out .env -k $password && node server.js"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
