feat: modify yml

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Decrypt .env file
         run: |
-          echo "${{ secrets.PASSWORD }}" | openssl aes-256-cbc -pbkdf2 -d -in .env.enc -out .env -k stdin
+          openssl aes-256-cbc -pbkdf2 -d -in .env.enc -out .env -k ${{ secrets.PASSWORD_KEY }}
         env:
           PASSWORD: ${{ secrets.PASSWORD }}
 
