--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -12,10 +12,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Decrypt .env file
-        run: |
-          openssl aes-256-cbc -pbkdf2 -d -in .env.enc -out .env -k ${{ secrets.PASSWORD_KEY }}
-        env:
-          PASSWORD: ${{ secrets.PASSWORD }}
+        run: openssl aes-256-cbc -d -pbkdf2 -in .env.enc -out .env -k ${{ secrets.PASSWORD_KEY }}
+
 
       - name: Connect deploy key
         uses: cloudtype-github-actions/connect@v1
