--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Decrypt .env file
-        run: openssl aes-256-cbc -d -pbkdf2 -in .env.enc -out .env -k ${{ secrets.PASSWORD_KEY }}
+        run: openssl aes-256-cbc -d -pbkdf2 -in .env.enc -out .env -k ${{ secrets.PASSWORD}}
 
 
       - name: Connect deploy key
