fix: mongodb access bug fix

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -46,8 +46,6 @@ jobs:
           password: ${{ secrets.RELEASE_SERVER_PASSWORD }}
           port: ${{ secrets.RELEASE_SERVER_PORT }}
           script: |
-            cd woju-server
-            export DOCKER_IMAGE=${{ secrets.DOCKER_USERNAME }}/woju-user-server
-            sed -i '/woju-user-server:/,/image:/s|image: .*|image: $DOCKER_IMAGE|' docker-compose.yml
+            cd ~/woju-server
             docker-compose pull woju-user-server
             docker-compose up -d woju-user-server
