--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mongodb-memory-server": "^10.0.0",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "uuid": "^10.0.0"
   },
   "name": "woju",
   "version": "1.0.0",
