--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "supertest": "^7.0.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.15.0"
   },
   "name": "woju",
   "version": "1.0.0",
