--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -19,6 +19,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
       
       - name: Check version changes
         id: set-matrix
@@ -37,7 +42,7 @@ jobs:
                 changed_servers+=("{\"name\":\"$server_name\",\"version\":\"$CURRENT_VERSION\"}")
               fi
             fi
-          done
+          done;
           
           # JSON 형식으로 변환
           matrix_json="{\"include\":[$(IFS=,; echo "${changed_servers[*]}")]}"
@@ -46,10 +51,10 @@ jobs:
 
   deploy:
     needs: check-version
-    if: fromJSON(needs.check-versions.outputs.matrix).include[0] != null
+    if: fromJson(needs.check-version.outputs.matrix).include[0] != null
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{fromJson(needs.check-version.outputs.matrix)}}
+      matrix: ${{ fromJson(needs.check-version.outputs.matrix) }}
 
     steps:
       - name: Checkout repository
