--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -34,6 +34,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Check Host System Files in packages/${{ matrix.server }}
+        run: ls -la ./packages/${{ matrix.server }}
+
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
@@ -53,5 +56,5 @@ jobs:
           port: ${{ secrets.RELEASE_SERVER_PORT }}
           script: |
             cd ~/woju-server
-            docker-compose pull ${{ matrix.server }}
-            docker-compose up -d ${{ matrix.server }}
+            docker-compose pull woju-${{ matrix.server }}
+            docker-compose up -d woju-${{ matrix.server }}
