--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -34,13 +34,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Check Host System Files in packages/${{ matrix.server }}
-        run: ls -la ./packages/${{ matrix.server }}
+      - name: Check Host System Files in packages
+        run: ls -la ./packages
 
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: ./packages/${{ matrix.server }}
+          context: ./packages
           file: ./packages/${{ matrix.server }}/Dockerfile
           platforms: linux/amd64
           push: true
