--- a/packages/server_user/Dockerfile
+++ b/packages/server_user/Dockerfile
@@ -1,32 +1,21 @@
 # packages/server_user/Dockerfile
 # Mono-repo의 packages/server_user 서비스를 위한 Dockerfile
+# context: packages
 
 # Node 버전을 20.18.0으로 변경하고, 서버가 사용하는 패키지를 복사.
 FROM node:20.18.0
 
 # Container 내부의 작업 디렉토리를 설정
-RUN pwd
-
-# Container 내부의 작업 디렉토리의 파일 확인
-RUN ls -al
-
-# Container 내부의 작업 디렉토리를 설정
 WORKDIR /app
 
-# 현재의 작업 디렉토리 확인
-RUN pwd
-
-# 현재 작업 디렉토리의 파일 확인
-RUN ls -al
-
 # server_user 서비스에 필요한 패키지 파일을 복사
-COPY package*.json ./
+COPY server_user/package*.json ./
 
 # server_user 서비스에 필요한 소스 코드를 복사
-COPY . .
+COPY server_user/* ./
 
 # packages/shared 폴더 내부의 Utils, Models, Services 폴더를 최상위에 복사
-COPY ../shared/* .
+COPY shared/* ./
 
 # 서버에 필요한 패키지를 설치
 RUN npm install --save
