fix: Adding pnpm-workspace.yaml

--- a/packages/server_user/Dockerfile
+++ b/packages/server_user/Dockerfile
@@ -8,7 +8,7 @@ RUN npm install -g pnpm
 WORKDIR /app
 
 # 모노레포 루트의 package.json과 pnpm-lock.yaml 파일을 컨텍스트에서 복사
-COPY package.json pnpm-lock.yaml ./
+COPY package.json pnpm-workspace.yaml ./
 
 # 종속성 설치
 RUN pnpm install
