--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -35,12 +35,12 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Check Host System Files in packages
-        run: ls -la ./packages
+        run: ls -la .
 
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: ./packages
+          context: .
           file: ./packages/${{ matrix.server }}/Dockerfile
           platforms: linux/amd64
           push: true
