feat: Item Server CI/CD Test

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         server:
           - server_user
-          # - server_item
+          - server_item
 
     steps:
       - name: Checkout repository
