--- a/packages/server_user/Dockerfile
+++ b/packages/server_user/Dockerfile
@@ -9,8 +9,8 @@ RUN npm install -g pnpm
 # Container 내부의 작업 디렉토리를 설정
 WORKDIR /app
 
-# 모노레포 루트의 package.json과 pnpm-workspace.yaml을 복사
-COPY package.json pnpm-workspace.yaml ./
+# 모노레포 루트의 모든 파일을 컨테이너 내부의 /app 폴더로 복사
+COPY . .
 
 # 종속성 설치
 RUN pnpm install
