--- a/packages/server_item/Dockerfile
+++ b/packages/server_item/Dockerfile
@@ -11,8 +11,8 @@ RUN npm install -g pnpm
 # Container 내부의 작업 디렉토리를 설정
 WORKDIR /app
 
-# 모노레포 루트의 모든 파일을 컨테이너 내부의 /app 폴더로 복사
-COPY . .
+# 모노레포 루트의 package.json과 pnpm-workspace.yaml, .env 파일을 컨테이너 내부의 /app 폴더로 복사
+COPY package.json pnpm-workspace.yaml .env ./
 
 # 종속성 설치
 RUN pnpm install
