--- a/packages/server_item/package.json
+++ b/packages/server_item/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "user",
+    "name": "item",
     "version": "1.0.0",
     "dependencies": {
         "@woju-monorepo/shared-models": "workspace:*",
